--- a/resources/views/users/registration.html
+++ b/resources/views/users/registration.html
@@ -1,5 +1,5 @@
 <div class="container row text-center mx-auto my-5">
-    <form method="post" action="../src/users/registration.php" class="mx-auto bg-light border border-2 rounded col-6 px-3 pt-3">
+    <form method="post" class="mx-auto bg-light border border-2 rounded col-6 px-3 pt-3">
         <h1>Regisztráció</h1>
         <label for="username" class="form-label">Felhasználónév</label><br>
         <input type="text" name="username" class="form-control"><br>
